annotate: fix, change button styling, align with TP 9.1

--- a/profiles/annotate/resources/css/annotate.css
+++ b/profiles/annotate/resources/css/annotate.css
@@ -164,6 +164,11 @@ fx-trigger.insert-auth-form{
 .header-toolbar a:link, .header-toolbar a:active {
     text-decoration: none;
 }
+.header-toolbar button, .edit-panel button, #markupPanel button {
+    background-color: transparent;
+    border: 0;
+    color: inherit;
+}
 
 .icon-group paper-icon-button{
     display: inline-block;
@@ -235,22 +240,13 @@ fx-fore textarea {
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
     width: 100%;
 }
-#markupPanel.side{
-    visibility: visible;
-}
-#markupPanel.side paper-icon-button{
-    transform:rotate(270deg);
-    margin-right:2rem;
-}
-#markupPanel.side paper-tabs{
-    height: 100%;
-}
+
 fx-group[ref="authority"]{
     overflow: hidden;
 }
-fx-fore #markupPanel section,
-fx-fore #markupPanel pb-tabs{
-    height: 100%;
+fx-fore #markupPanel pb-tabs,
+fx-fore #markupPanel .preview-toolbar {
+    height: 25vh;
 }
 
 .annotate-root {
